<resources>
    <string name="POS_attack">Attacked! Please contact your service provider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alarm_reason">Alarm Reason</string>
    <string name="alarm_reason_1">1-channel alarm</string>
    <string name="alarm_reason_2">2-channel alarm</string>
    <string name="alarm_reason_3">3-channel alarm</string>
    <string name="alarm_reason_4">4-channel alarm</string>
    <string name="alarm_reason_lost">Sensitive data lost</string>
    <string name="alg_err_nogm">Not support gm,no GM chip</string>
    <string name="alg_ret_param_error">Algorithm parameter error</string>
    <string name="alg_ret_rcv_sm_error">National chip failed to respond</string>
    <string name="alg_ret_send_sm_error">National chip reception failed</string>
    <string name="apn">APN</string>
    <string name="apn_authentication_type">Authentication Type</string>
    <string name="apn_bearer">Bearer</string>
    <string name="apn_content">Your SIM card can\'t access network,please retry after completed info. Click [Cancel] if you want to access network with WIFI</string>
    <string name="apn_mcc">MCC</string>
    <string name="apn_mms_port">MMS Port</string>
    <string name="apn_mms_proxy">MMS Proxy</string>
    <string name="apn_mmsc">MMSC</string>
    <string name="apn_mnc">MNC</string>
    <string name="apn_name">APN Name or Content</string>
    <string name="apn_password">Password</string>
    <string name="apn_port">APN Port</string>
    <string name="apn_protocol">APN Protocol</string>
    <string name="apn_proxy">APN Proxy</string>
    <string name="apn_retry">Retry</string>
    <string name="apn_roaming_protocol">APN Roaming Protocol</string>
    <string name="apn_server">Server</string>
    <string name="apn_set_title">APN Setting</string>
    <string name="apn_type">APN Type</string>
    <string name="apn_username">User Name</string>
    <string name="app_name">Upgrade</string>
    <string name="button_next_step">Next step</string>
    <string name="check_fail5">Authorize times over limited,please retry after 24h</string>
    <string name="check_title">Alarm cause investigation</string>
    <string name="clean_alarm">clear alarm</string>
    <string name="click_screen_try">Click on the screen to try again</string>
    <string name="confirm_authorization_code_status">Test L1: Confirm authorization code status</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_shutdown">Shutdown right now？</string>
    <string name="confirm_yes">OK</string>
    <string name="conversion_system_mode">Please input auth code to switch mode</string>
    <string name="current_status">Current Status</string>
    <string name="define_roundedimageview" />
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_cancel_save">Cancel Save</string>
    <string name="dialog_connect">Connect</string>
    <string name="dialog_help">How to fix</string>
    <string name="dialog_install_sim_card">Install SIM card as shown in the picture \n Click [retry] after installing finished</string>
    <string name="dialog_known">I known it</string>
    <string name="dialog_network_connection_failed">Connect to network failed</string>
    <string name="dialog_password_error">Password error</string>
    <string name="dialog_password_input">Input password</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_sim_card_network_connetion_failed_guide">Tutorial of why SIM card connect to network failed</string>
    <string name="emv_app_select_index_error">App select index error</string>
    <string name="emv_cardinfo_error">Check card error, CardInfo is null</string>
    <string name="emv_cert_verify_error">Certification verify error</string>
    <string name="emv_confirm_card_info_error">Verify the card information failed or timed out.</string>
    <string name="emv_data_exchange_error">Data exchange error</string>
    <string name="emv_data_exchange_timeout">Data exchange timeout</string>
    <string name="emv_db_no_matched_aid">There is not AID matched in database.</string>
    <string name="emv_db_no_matched_capk">There is not CAPK matched in database.</string>
    <string name="emv_db_opt_error">Operate database error.</string>
    <string name="emv_db_save_term_error">Error with database save terminal parameter.</string>
    <string name="emv_final_select_error">Final select error</string>
    <string name="emv_final_select_timeout">Final select timeout</string>
    <string name="emv_in_process">The EMV process is not finished and cannot be performed next time.</string>
    <string name="emv_kernel_exception">Kernel process exception</string>
    <string name="emv_kernel_msg_null">Transaction processing data is empty.</string>
    <string name="emv_keyboard_params_error">Keyboard initialization exception, passed keyboard coordinate parameter is Null.</string>
    <string name="emv_nfc_cvm_error">Nfc CVM process error</string>
    <string name="emv_online_process_error">Online process error</string>
    <string name="emv_pan_error">PAN data error</string>
    <string name="emv_pin_canceled">PIN cancel</string>
    <string name="emv_pin_error">PIN error</string>
    <string name="emv_pinpad_callback_error">The PINPAD callback is empty.</string>
    <string name="emv_prepare_fail">Transaction preprocess failed.</string>
    <string name="emv_signature_error">Signature error</string>
    <string name="emv_terminal_risk_management_timeout">Terminal risk management timeout</string>
    <string name="emv_timing_error">The function call sequence failed.</string>
    <string name="emv_trans_process_fail">Transaction process failure</string>
    <string name="emv_trans_type_unsupport">Transaction process failed and transaction type is not supported.</string>
    <string name="emv_transdata_invalid">transdata error</string>
    <string name="emv_unknown_cvm_type">Unknown CVM type</string>
    <string name="error_code_000">ErrorCode:000000000800000888800</string>
    <string name="error_net">Network error</string>
    <string name="error_sp_hint">Get device mode failed，please retry!</string>
    <string name="etc_no_device_searched">No device searched</string>
    <string name="factory_forbid_swicth_debug">Unable to switch to debug mode when terminal state is Factory!</string>
    <string name="fail_check_10">Wrong switching mode type</string>
    <string name="fail_check_11">Clear trigger type error</string>
    <string name="fail_check_12">Write SN type error</string>
    <string name="fail_check_2">kms public key decryption error</string>
    <string name="fail_check_3">KMS encrypted data structure error</string>
    <string name="fail_check_6">POS private key decryption error</string>
    <string name="fail_check_7">Check result error</string>
    <string name="fail_check_8">Random number length error</string>
    <string name="fail_check_9">Random number error</string>
    <string name="fail_check_sp">SP verify encrypt data failed</string>
    <string name="fail_check_times">Authorize failed,%d times left,please retry</string>
    <string name="fail_getdata_sp">Connect to SP failed,please retry!</string>
    <string name="firmware_update_fail">Firmware upgrade failed</string>
    <string name="firmware_verify_fail">Firmware validation failed</string>
    <string name="get_device_model">Test L1: Get the device model</string>
    <string name="get_security_status">Test l1: Get the safety status of the machine</string>
    <string name="get_sn_number">Test L1: Get the SN number</string>
    <string name="go_to_set">Go to set</string>
    <string name="good">good</string>
    <string name="history_status">History Record</string>
    <string name="i2c_recv_data_timeout">I2C receive data timeout</string>
    <string name="i2c_send_data_failed">I2C send data failed</string>
    <string name="input_authcode_hint">Please input auth code to unlock</string>
    <string name="invoking_error_params">Param error</string>
    <string name="invoking_pubkey_len_not_match">Public key length not match</string>
    <string name="invoking_repeat_invok">Repeated call function</string>
    <string name="is_debug_machine">Test L1: Get whether the POS is a debugging machine</string>
    <string name="network_activation">Connect to network</string>
    <string name="network_sim_connect">SIM Network</string>
    <string name="network_sim_setting">Setting</string>
    <string name="network_sim_status_failed">Detected SIM card,but connect to network failed</string>
    <string name="request_authorization_code">Test L1: Request authorization code ciphertext</string>
    <string name="send_attacked_broadcast">Send attacked broadcast</string>
    <string name="send_change_mode_broadcast">Send change mode broadcast</string>
    <string name="send_password_setting_broadcast">Send power-on password setting broadcast</string>
    <string name="shutdown">Shutdown and repair</string>
    <string name="sim_fail_help_message">1.\tSIM card network connection will be override by WIFI,if you want to connect network by SIM card,please disconnect WIFI firstly(click WIFI item and select [Cancel Save]);\n 2.\tShutdown device,take out SIM card and check it(test by a cellphone is suggested),replace it if there\'re any problem exist.</string>
    <string name="success">Finish</string>
    <string name="wenxintishi">Kindly Reminder:</string>
    <string name="wenxintishi_msg1">There are some problems with the device,Please contact your sales agency in time：&lt;font color=#FF3c00&gt;&lt;b&gt;400-902-1168&lt;/b&gt;&lt;/font&gt;</string>
    <string name="wifi_searching">Searching...</string>
    <string name="wlan">WLAN</string>
</resources>