<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_hint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="45dp">
        <TextView android:textSize="22sp" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/check_title"/>
        <TextView android:textSize="14sp" android:textColor="@color/transparentblack70" android:gravity="center" android:id="@+id/tv_errorcode" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/error_code_000"/>
        <TextView android:textSize="14sp" android:textColor="@color/transparentblack70" android:gravity="center" android:id="@+id/tv_sn" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_title" android:background="@drawable/bg_divider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_below="@+id/ll_hint">
        <TextView android:textSize="14sp" android:textColor="@color/transparentblack70" android:id="@+id/tv_check_type" android:paddingLeft="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/alarm_reason" android:layout_weight="3"/>
        <TextView android:textSize="14sp" android:textColor="@color/transparentblack70" android:gravity="center" android:id="@+id/tv_current_status" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/current_status" android:layout_weight="2"/>
        <TextView android:textSize="14sp" android:textColor="@color/transparentblack70" android:gravity="center" android:id="@+id/tv_history_status" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/history_status" android:layout_weight="2"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView android:id="@+id/rlv_check" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/ll_btn" android:layout_below="@+id/ll_title"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_btn" android:background="@drawable/bg_divider" android:layout_width="match_parent" android:layout_height="wrap_content" android:divider="@drawable/divider" android:layout_alignParentBottom="true" android:showDividers="middle">
        <Button android:textColor="@color/black" android:id="@+id/btn_close" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shutdown" android:layout_weight="1"/>
        <View android:background="@color/transparentblack70" android:layout_width="1dp" android:layout_height="match_parent" android:layout_weight="0.02"/>
        <Button android:textColor="@color/black" android:id="@+id/btn_clear" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clean_alarm" android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
