<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/back" android:paddingLeft="16dp" android:paddingTop="10dp" android:layout_width="60dp" android:layout_height="32dp" android:src="@drawable/img_back" android:contentDescription="@null"/>
    <TextView android:textSize="23dp" android:textColor="#212121" android:gravity="center" android:layout_width="match_parent" android:layout_height="90dp" android:text="@string/network_activation"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_sim_setting" android:background="#f5f5f5" android:layout_width="match_parent" android:layout_height="35dp">
        <TextView android:textSize="12sp" android:textColor="#666666" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/network_sim_connect" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="#ff6900" android:id="@+id/tv_sim_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16dp" android:text="@string/network_sim_setting"/>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="54dp">
        <TextView android:textSize="14sp" android:textColor="#212121" android:id="@+id/tv_sim_status" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/network_sim_status_failed" android:layout_weight="1"/>
        <ImageView android:id="@+id/iv_sim_icon" android:layout_width="20dp" android:layout_height="24dp" android:layout_marginRight="16dp" android:src="@drawable/sim_unknown"/>
    </LinearLayout>
    <TextView android:textColor="#666666" android:gravity="center_vertical" android:background="#f5f5f5" android:paddingLeft="16dp" android:layout_width="match_parent" android:layout_height="35dp" android:layout_marginTop="0.5dp" android:text="@string/wlan"/>
    <RelativeLayout android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <TextView android:textSize="12sp" android:textColor="#c9c9c9" android:id="@+id/empty_search" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_searching" android:layout_centerInParent="true"/>
        <ListView android:id="@+id/listView" android:visibility="visible" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:divider="#ebebeb" android:dividerHeight="0.5dp"/>
    </RelativeLayout>
    <View android:id="@+id/view_line" android:background="#cccccc" android:layout_width="match_parent" android:layout_height="0.5dp"/>
    <LinearLayout android:gravity="center" android:id="@+id/layout_next_btn" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="95dp" android:elevation="5dp">
        <Button android:textSize="16sp" android:textColor="#ffffff" android:id="@+id/tv_next_button" android:background="@drawable/bg_next_shape" android:layout_width="296dp" android:layout_height="45dp" android:text="@string/success"/>
    </LinearLayout>
</LinearLayout>
