<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/bg_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/layout_back" android:layout_width="60dp" android:layout_height="32dp">
        <ImageView android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:src="@drawable/img_back" android:layout_alignParentBottom="true" android:contentDescription="@null"/>
    </RelativeLayout>
    <TextView android:textSize="15sp" android:textColor="@color/font_orange" android:gravity="center_horizontal" android:id="@+id/top_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="74dp" android:text="@string/dialog_sim_card_network_connetion_failed_guide" android:layout_centerHorizontal="true"/>
    <RelativeLayout android:id="@+id/relayout" android:paddingLeft="22dp" android:paddingTop="36dp" android:paddingRight="22dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/top_title">
        <TextView android:textSize="13sp" android:textColor="@color/black" android:id="@+id/sim_fail_help_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sim_fail_help_message" android:lineSpacingExtra="13.5dp"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/tip" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="22dp" android:layout_marginTop="38dp" android:layout_marginRight="22dp" android:layout_below="@+id/relayout">
        <TextView android:textSize="13sp" android:textColor="@color/black" android:id="@+id/txt_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wenxintishi"/>
        <TextView android:textSize="13sp" android:textColor="@color/black" android:id="@+id/txt_msg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="13.5dp" android:text="@string/wenxintishi_msg1" android:layout_below="@+id/txt_title" android:lineSpacingExtra="13.5dp"/>
    </RelativeLayout>
</RelativeLayout>
